Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_ready, handle_timed_complete,
                       handle_timed_accept): On platforms where poll() is
          available, prefer that to using select() for checking a single
          handle's state and/or waiting for a condition. This preference
          was previously only used if ACE_HAS_LIMITED_SELECT was set. The
          ACE_HAS_LIMITED_SELECT choice is removed, making ACE_HAS_POLL the
          setting that switches this preference. The driving reason for this
          is that if select() is called to detect changes on a handle whose
          values falls outside that which can safely be stored in an fdset,
          the handle-setting macros/functions will set/clear bits outside
          of the fdset. This results in very weird memory changes, often in
          the stack, which are very hard to diagnose. poll()'s operation
          does not suffer from this affect. With the growing use of large
          numbers of handles and use of ACE_Dev_Poll_Reactor on Linux,
          the rate at which this problem was cropping up was increasing.
          Thanks to Olivier Langlois for diagnosing this problem and
          proposing the patch.
        
          (handle_ready): Properly set the poll condition for read and/or
          write. Thanks to kumaran.prem@gmail.com for this fix.

        * ace/Acceptor.cpp:
        * ace/SOCK_IO.cpp:
        * ace/SOCK_Dgram.cpp:
        * tests/MT_SOCK_Test.cpp:
        * tests/SOCK_Test.cpp: Replaced use of ACE_OS::select() with
          ACE::handle_ready() and friends.

        This all resolves Bugzilla #3606.

Fri Aug 27 19:10:16 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Merging dependent_libs support for gnuace from TAO 1.5a.
          (Bugzilla #3281)

Fri Aug 27 18:36:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
