@@ -1210,7 +1210,7 @@ Server::handle_read_dgram (const ACE_Asynch_Read_Dgram::Result &result)
     else
       mb->release ();
 
-    this->io_count_--;
+    --this->io_count_;
     if (this->io_count_ > 0)
       return;
   }
@@ -1306,7 +1306,7 @@ Server::handle_write_dgram (const ACE_Asynch_Write_Dgram::Result &result)
           this->initiate_read ();
       }
 
-    this->io_count_--;
+    --this->io_count_;
     if (this->io_count_ > 0)
       return;
   }
@@ -1854,7 +1854,7 @@ Client::handle_write_dgram (const ACE_Asynch_Write_Dgram::Result &result)
           this->initiate_read ();
       }
 
-    this->io_count_--;
+    --this->io_count_;
     if (this->io_count_ > 0)
       return;
   }
@@ -1981,7 +1981,7 @@ Client::handle_read_dgram (const ACE_Asynch_Read_Dgram::Result &result)
       }
 
     mb->release ();
-    this->io_count_--;
+    --this->io_count_;
     if (this->io_count_ > 0)
       return;
   }
